# MuEOSLibrary

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
baryons/: README.md
doc/: README.md
eos_table/: check_bar_pressure.py  compare_w_mu_ele.cpp  generate_comparison_table.cpp  generate_complete_table.cpp  generate_eta_table.cpp  generate_global_table.cpp  generate_lep_table.cpp  make_hist_diff.py  test_hist.cpp
eos_table/compile/: README.md
eos_table/electrons/: README.md
eos_table/global/: README.md  read_table.py
eos_table/muons/: README.md
include/: FD_functions.hpp  complete_FG.hpp  constants.hpp  eos_assembled.hpp  eos_baryons.hpp  eos_baryons_old_2.hpp  eos_fermions.hpp  eos_leptons.hpp  eos_neutrinos.hpp  eos_photons.hpp  eos_radiation.hpp  fermi_integrals.hpp  find_eta.hpp  glag.hpp  gleg.hpp  interp.hpp  parameters.hpp
lib/: README.md
old_code/: compare_eos.py  compare_tables.py  compare_with_fortran.py  test_eos.cpp  test_eos_accuracy.cpp
output/: README.md  generate_lep_table.cpp  generate_output_table.cpp
output/data/: README.md
src/: complete_FG.cpp  constants.hpp  eos_assembled.cpp  eos_baryons.cpp  eos_fermions.cpp  eos_leptons.cpp  eos_radiation.cpp  fermi_integrals.cpp  interp.cpp  mueosclass.hpp  parameters.hpp
src/compile/: README.md
src/eos_species/: eos_assembled.cpp  eos_assembled.hpp  eos_baryons.cpp  eos_leptons.hpp  eos_neutrinos.cpp  eos_photons.cpp  eos_species.cpp  eos_species.hpp
src/fermi_integrals/: fermi_integrals.hpp  generalized_FD.cpp  nonrel_FD.cpp
src/helmholtz_eos/: cs2_sympy.py  helmholtz_eos.cpp  helmholtz_eos.hpp
src/num_tools/: num_tools.hpp  safe_exp.cpp
src/other_cpp/: eos_baryons.cpp  eos_neutrinos.cpp
src_old/: FD_functions.cpp  eos_assembled.cpp  eos_baryons.cpp  find_eta.cpp
src_old/other_cpp/: eos_baryons_compose.cpp  eos_baryons_old.cpp  interp.hpp
tests/: comparison_with_mu.cpp  comparison_without_mu.cpp  hist_comp_with_mu.cpp  test_baryon_eos.cpp  test_eos.cpp  test_eos_assembled.cpp  test_eos_performance.cpp
tests/compile/: test_eos_accuracy  test_eos_performance
tests/data/: README.md  eos_electrons_v4.txt
tests/make_plots/: compare_eos.py  compare_lep_der.py  compare_tables.py  compare_tables_new.py  plot_eos.py  test_timmes.py
tests/output/: README.md
tests/plots/: README.md
(+12 files in other folders)
